test/expected/declare_etsf_v.out
declare f as extern static function returning void
        ^
9: error: "external static" is illegal for function
